--- a/khyeras/styles/khyeras_v1/template/header_buttons.html
+++ b/khyeras/styles/khyeras_v1/template/header_buttons.html
@@ -33,7 +33,7 @@
 			</li>
 		<!-- ENDIF -->
 		<!-- IF S_NOTIFICATIONS_DISPLAY -->
-			<li class="dropdown-container">
+			<li class="dropdown-container notification-container">
 				<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="button dropdown-trigger dropdown-toggle">
 					<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
 					<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
