--- a/khyeras/_dev/styles/khyeras_v1/template/header_buttons.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/header_buttons.html
@@ -27,7 +27,7 @@
 		<!-- IF S_DISPLAY_PM -->
 			<li>
 				<a class="button" href="{U_PRIVATEMSGS}">
-					<i class="icon fa-inbox fa-fw" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES}</span>
+					<i class="icon rpg-icon rpg-scroll-unfurled" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES}</span>
 					<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
 				</a>
 			</li>
@@ -35,7 +35,7 @@
 		<!-- IF S_NOTIFICATIONS_DISPLAY -->
 			<li class="dropdown-container notification-container">
 				<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="button dropdown-trigger dropdown-toggle">
-					<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
+					<i class="icon rpg-icon rpg-hunting-horn" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
 					<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
 				</a>
 				<!-- INCLUDE notification_dropdown.html -->
@@ -51,13 +51,13 @@
 		<!-- IF U_MCP -->
 			<li>
 				<a class="button" href="{U_MCP}" title="{L_MCP}">
-					<i class="icon fa-gavel fa-fw" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
+					<i class="icon rpg-icon rpg-gavel" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
 				</a>
 			</li>
 		<!-- ENDIF -->
 		<li>
 			<a class="button" href="{U_PROFILE}" title="{L_PROFILE}">
-				<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_PROFILE}</span>
+				<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_UCP}</span>
 			</a>
 		</li>
 		<li>
