--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -17,7 +17,8 @@
 // Everything else
 @import 'base';
 @import 'typography';
-@import 'rpg-icons';
+@import 'icons-fa';
+@import 'icons-rpg';
 @import 'form-fields';
 @import 'layout';
 @import 'viewlisting';
