--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -120,7 +120,8 @@
 			}
 			&.attach-status .file-status {
 				&:before {
-					@include font-awesome($fs: rem(20px));
+					@include icon-font($fs: false);
+					font-size: rem(20px);
 				}
 				&.file-uploaded:before {
 					content: unicode($icon-check-circle);
