--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -130,7 +130,7 @@
 	.inline-attachment, .attachbox {
 		.file {
 			.icon_topic_attach:before {
-				@include font-awesome;
+				@include icon-font;				
 				content: unicode($icon-file-o);
 			}
 			.attach-image {
