--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
@@ -105,10 +105,11 @@
 							display: none;
 						}
 						&:before {
-							@include rpg-icons($fs: rem(16px));
-							content: unicode($icon-book-cover);
-							padding-right: 5px;
+							@include icon-font($family: game, $fs: false, $lh: false);
+							font-size: rem(16px);
 							vertical-align: bottom;
+							content: unicode($rpg-bookmarklet);
+							padding-right: 5px;
 						}
 						ul:before {
 							@include inline-block(middle);
@@ -149,7 +150,8 @@
 				@include sizing($list-icon-size, $list-icon-size);
 				line-height: $list-icon-size;
 				z-index: 2;
-				@include rpg-icons($fs: rem(22px));
+				@include icon-font($family: game, $fs: false, $lh: false);
+				font-size: rem(24px);
 				text-align: center;
 				background: $color-04;
 				border: 1px solid mix($color-01, $color-04, 5%);
@@ -166,44 +168,44 @@
 		}
 		&[class*='mine'] dt:after {
 			@include forum-icon-position;
-			@include font-awesome;
+			@include icon-font;
 			content: unicode($icon-star);
 			z-index: 3;
 			color: $color-14;
 		}
 	}
 	.forum_link, .topic_moved {
-		@include forum-icon($icon-direction-sign);
+		@include forum-icon($rpg-direction-sign);
 	}
 	.forum_read_locked, .forum_unread_locked, .topic_read_locked, .topic_read_locked_mine, .topic_unread_locked, .topic_unread_locked_mine {
-		@include forum-icon($icon-padlock);
+		@include forum-icon($rpg-padlock);
 	}
 	.forum_read, .forum_read_subforum {
-		@include forum-icon($icon-book-cover);
+		@include forum-icon($rpg-bookmarklet);
 	}
 	.forum_unread, .forum_unread_subforum {
-		@include forum-icon($icon-book-cover-02);
+		@include forum-icon($rpg-secret-book);
 	}
 	.topic_read, .topic_read_mine, .topic_read_hot, .topic_read_hot_mine, .pm_read {
-		@include forum-icon($icon-scroll-unfurled);
+		@include forum-icon($rpg-scroll-unfurled);
 	}
 	.topic_unread, .topic_unread_mine, .topic_unread_hot, .topic_unread_hot_mine, .pm_unread {
-		@include forum-icon($icon-tied-scroll);
+		@include forum-icon($rpg-tied-scroll);
 	}
 	.global_read, .global_read_mine, .global_read_locked,
 	.global_read_locked_mine, .global_unread, .global_unread_mine,
 	.global_unread_locked, .global_unread_locked_mine {
-		@include forum-icon($icon-compass);
+		@include forum-icon($rpg-compass);
 	}
 	.announce_read, .announce_read_mine, .announce_read_locked,
 	.announce_read_locked_mine, .announce_unread, .announce_unread_mine,
 	.announce_unread_locked, .announce_unread_locked_mine {
-		@include forum-icon($icon-hunting-horn);
+		@include forum-icon($rpg-trumpet-flag);
 	}
 	.sticky_read, .sticky_read_mine, .sticky_read_locked,
 	.sticky_read_locked_mine, .sticky_unread, .sticky_unread_mine,
 	.sticky_unread_locked, .sticky_unread_locked_mine {
-		@include forum-icon($icon-stabbed-note);
+		@include forum-icon($rpg-stabbed-note);
 	}
 }
 
@@ -319,7 +321,8 @@ table {
 			font-size: rem(16px);
 			display: block;
 			&:before {
-				@include font-awesome($fs: rem(22px));
+				@include icon-font($fs: false);
+				font-size: rem(22px);
 				content: unicode($icon-exclamation-circle);
 				padding-right: 10px;
 				transform: rotate(-20deg);
