--- a/khyeras/styles/khyeras_v1/template/header_buttons.html
+++ b/khyeras/styles/khyeras_v1/template/header_buttons.html
@@ -35,7 +35,7 @@
 		<!-- IF S_NOTIFICATIONS_DISPLAY -->
 			<li class="dropdown-container notification-container">
 				<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="button dropdown-trigger dropdown-toggle">
-					<i class="icon rpg-icon rpg-hunting-horn" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
+					<i class="icon rpg-icon rpg-trumpet-flag" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
 					<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
 				</a>
 				<!-- INCLUDE notification_dropdown.html -->
