--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -130,8 +130,8 @@
 	.inline-attachment, .attachbox {
 		.file {
 			.icon_topic_attach:before {
-				@include icon-font;				
-				content: unicode($icon-file-o);
+				@include icon-font($family: game);
+				content: unicode($rpg-scroll-unfurled);
 			}
 			.attach-image {
 				display: inline-block;
