--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -19,7 +19,7 @@ fieldset {
 .inputbox, textarea, select, .button, .button1, .button2 {
 	border: 0;
 	border-radius: 3px;
-	line-height: rem(20px);
+	line-height: 1.5;
 }
 
 .inputbox, textarea, select {
