--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -94,6 +94,11 @@ input[type='search']::-webkit-search-cancel-button {
 			color: $color-12;
 			@include transition(color 0.3s ease-in-out);
 		}
+		.fa-cog {
+			font-size: rem(16px);
+			position: relative;
+			top: 1px;
+		}
 		&:hover .icon {
 			color: $color-13;
 		}
