--- a/khyeras/styles/khyeras_v1/template/header_buttons.html
+++ b/khyeras/styles/khyeras_v1/template/header_buttons.html
@@ -44,7 +44,7 @@
 		<!-- IF U_ACP -->
 			<li>
 				<a class="button" href="{U_ACP}" title="{L_ACP}">
-					<i class="icon fa-cogs fa-fw" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
+					<i class="icon rpg-icon rpg-pokecog" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
 				</a>
 			</li>
 		<!-- ENDIF -->
@@ -81,7 +81,7 @@
 		<!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
 			<li>
 				<a class="button" href="{U_REGISTER}">
-					<i class="icon fa-pencil-square-o fa-fw" aria-hidden="true"></i><span>{L_REGISTER}</span>
+					<i class="icon rpg-icon rpg-quill" aria-hidden="true"></i><span>{L_REGISTER}</span>
 				</a>
 			</li>
 		<!-- ENDIF -->
