--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -131,6 +131,7 @@ input[type='search']::-webkit-search-cancel-button {
 
 .button-icon-only, .mcp-main .postbody .post-buttons .button {
 	@include small-form-ele($padding: 5px);
+	max-height: none;
 }
 
 fieldset.submit-buttons {
