--- a/khyeras/styles/khyeras_v1/template/header_buttons.html
+++ b/khyeras/styles/khyeras_v1/template/header_buttons.html
@@ -51,7 +51,7 @@
 		<!-- IF U_MCP -->
 			<li>
 				<a class="button" href="{U_MCP}" title="{L_MCP}">
-					<i class="icon rpg-icon rpg-gavel" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
+					<i class="icon rpg-icon rpg-thors-hammer" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
 				</a>
 			</li>
 		<!-- ENDIF -->
