--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1242,7 +1242,7 @@
 		}
 		dd {
 			display: none;
-			&.profile-rank, &.profile-posts, &.profile-joined, &.profile-contact {
+			&.profile-rank, &.profile-posts, &.profile-joined, &.profile-contact, &.search-result-date {
 				display: block;
 			}
 		}
@@ -1485,7 +1485,7 @@
 	}
 
 	// viewtopic.scss
-	.postbod .attachbox {
+	.postbody .attachbox {
 		display: block;
 		& > dd {
 			width: auto;
